app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app-svc
  namespace: default
spec:
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: app
  type: NodePort
